added divs around checks to get them to flex properly

--- a/join/index.html
+++ b/join/index.html
@@ -38,69 +38,87 @@
                 <img src="../images/images/profile-placeholder.png" alt="">
             </div>
             <div class="inputs">
-                <label for="name">Name</label>
-                <br>
-                <input type="text" id="name" name="name" required>
-                <br>
-                <label for="email">Email Address</label>
-                <br>
-                <input type="email" id="email" name="email">
-                <br>
-                <label for="password">Password</label>
-                <br>
-                <input type="password" id="password" name="password">
-                <br>
-                <label for="confirm-password">Confirm Password</label>
-                <br>
-                <input type="confirm-password" id="confirm-password" name="confirm-password">
+                <div class="tp">
+                    <label for="name">name</label>
+                    <br>
+                    <input type="text" id="name" name="name" required>
+                    <br>
+                    <label for="email">email address</label>
+                    <br>
+                    <input type="email" id="email" name="email">
+                </div>
+                <div class="bt">
+                    <label for="password">password</label>
+                    <br>
+                    <input type="password" id="password" name="password">
+                    <br>
+                    <label for="confirm-password">confirm password</label>
+                    <br>
+                    <input type="confirm-password" id="confirm-password" name="confirm-password">
+                </div>
             </div>
         </div>
         <div class="checks">
             <legend>Which Generes are you intrested in?</legend>
             <br>
-            <input type="checkbox" name="additions" id="action" value="action">
-            <label for="action">action</label>
-            <br>
-            <input type="checkbox" name="additions" id="adventure" value="adventure">
-            <label for="adventure">adventure</label>
-            <br>
-            <input type="checkbox" name="additions" id="comedy" value="comedy">
-            <label for="comedy">comedy</label>
-            <br>
-            <input type="checkbox" name="additions" id="drama" value="drama">
-            <label for="drama">drama</label>
-            <br>
-            <input type="checkbox" name="additions" id="fantasy" value="fantasy">
-            <label for="fantasy">fantasy</label>
-            <br>
-            <input type="checkbox" name="additions" id="historical" value="historical">
-            <label for="historical">historical</label>
-            <br>
-            <input type="checkbox" name="additions" id="horror" value="horror">
-            <label for="horror">horror</label>
-            <br>
-            <input type="checkbox" name="additions" id="mystery" value="mystery">
-            <label for="mystery">mystery</label>
-            <br>
-            <input type="checkbox" name="additions" id="romance" value="romance">
-            <label for="romance">romance</label>
-            <br>
-            <input type="checkbox" name="additions" id="scifi" value="scifi">
-            <label for="scifi">science fiction</label>
-            <br>
-            <input type="checkbox" name="additions" id="western" value="western">
-            <label for="western">western</label>
+            <div class="checkss">
+                <div class="chec">
+                    <input type="checkbox" name="additions" id="action" value="action">
+                    <label for="action">action</label>
+                </div>
+                <div class="chec">
+                    <input type="checkbox" name="additions" id="adventure" value="adventure">
+                    <label for="adventure">adventure</label>
+                </div>
+                <div class="chec">
+                    <input type="checkbox" name="additions" id="comedy" value="comedy">
+                    <label for="comedy">comedy</label>
+                </div>
+                <div class="chec">
+                    <input type="checkbox" name="additions" id="drama" value="drama">
+                    <label for="drama">drama</label>
+                </div>
+                <div class="chec">
+                    <input type="checkbox" name="additions" id="fantasy" value="fantasy">
+                    <label for="fantasy">fantasy</label>
+                </div>
+                <div class="chec">
+                    <input type="checkbox" name="additions" id="historical" value="historical">
+                    <label for="historical">historical</label>
+                </div>
+                <div class="chec">
+                    <input type="checkbox" name="additions" id="horror" value="horror">
+                    <label for="horror">horror</label>
+                </div>
+                <div class="chec">
+                    <input type="checkbox" name="additions" id="mystery" value="mystery">
+                    <label for="mystery">mystery</label>
+                </div>
+                <div class="chec">
+                    <input type="checkbox" name="additions" id="romance" value="romance">
+                    <label for="romance">romance</label>
+                </div>
+                <div class="chec">
+                    <input type="checkbox" name="additions" id="scifi" value="scifi">
+                    <label for="scifi">science fiction</label>
+                </div>
+                <div class="chec">
+                    <input type="checkbox" name="additions" id="western" value="western">
+                    <label for="western">western</label>
+                </div>
+            </div>
         </div>
-        <div class="text">
-            <label> Additonal input</label>
-            <br>
-            <textarea id="myText">
+    </div>
+    <div class="text">
+        <label> Additonal input</label>
+        <br>
+        <textarea id="myText">
             </textarea>
-        </div>
-        <div class="text">
-            <input type="submit" value="Join Film Club" id="submit">
+    </div>
+    <div class="text">
+        <input type="submit" value="Join Film Club" id="submit">
 
-        </div>
+    </div>
     </div>
     <footer>
         <nav>
