majority of all pages finished

--- a/calendar/index.html
+++ b/calendar/index.html
@@ -143,7 +143,7 @@
                     <a href="calendar/index.html">Calendar</a>
                 </li>
                 <li class="join">
-                    <a href="join/index.html">Join</a>
+                    <a href="../join/index.html">Join</a>
                 </li>
                 <li id="bot"> ©2017, Film Club</li>
             </ul>
