--- a/join/index.html
+++ b/join/index.html
@@ -102,7 +102,7 @@
                     <input type="checkbox" name="additions" id="scifi" value="scifi">
                     <label for="scifi">science fiction</label>
                 </div>
-                <div class="chec">
+                <div class="checP">
                     <input type="checkbox" name="additions" id="western" value="western">
                     <label for="western">western</label>
                 </div>
